lib/third/test/site/invalid_content_types/xml.php
<?php 
header('Content-Type: application/xml');

for($i = 0; $i < 10000; $i ++) {
	echo 'A';
}
?>